# rinha-de-backend-2026

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  info.json  nginx.conf  package-lock.json  package.json  tsconfig.json
docs/superpowers/plans/: 2026-05-25-fraud-detection-backend.md
docs/superpowers/specs/: 2026-05-25-fraud-detection-design.md
scripts/: preprocess.ts
src/: dataset.ts  distance.rs  ivf.rs  kmeans.rs  knn.ts  main.rs  mmap-io.d.ts  quantize.rs  server.ts  types.rs  types.ts  vectorize.rs  vectorize.ts
tests/: knn.test.ts  vectorize.test.ts
